feat: add endpoint to get user transcript
